--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Ignore everything in dataset by default
 dataset/*
 runs/*
+__pycache__/*
+.ipynb_checkpoints/*
 
 # Include files directly under 00train_test (but not its subfolders)
 !dataset/00train_test/*
